Support for large files.
 - App is now multithreaded, avoiding
   process exit due to timeouts.
 - Networking system dumps data every
   chunk, keeping the app from consuming
   too much space.

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -71,4 +71,11 @@ android:layout_height="wrap_content"
 android:text="Send File"
 >
 </Button>
+<TextView
+android:id="@+id/log"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:textSize="18sp"
+>
+</TextView>
 </TableLayout>
